# Mod3.2

./: Backup3.py  Backup5March31.py  ColesBackup.py  ContinuousLoop-Scott  CoordinatePane-Sophie.py  Dijkstra-Cole.py  Dijkstra.py  FinalDesign  GazeboStartCode.sh  Hola  Hola.py  LiDAR-Matthew.py  LiDAR.py  MainAlgorithm.py  MainWithComments  MainWithComments.py  ObstacleAvoidance-Carter.py  Pseudocode.md  README.md  Steering-Dermot.py  Test.py  Test2.py  Test3.py  WorkingCodedAlgorithm(PLEASE_MAKE_COPY_BEFORE_EDITING).py  WorkingCodedAlgorithmBackup.py  main.py  setup.py
code_snipets/: example_alg.py  usefull_command_line_stuff.txt
qset-lib/: CMakeLists.txt  package.xml
qset-lib/src/qset_lib/: __init__.py
qset_math/: CMakeLists.txt  package.xml
qset_math/include/qset_math/: ekf.hpp  math.hpp  types.hpp
qset_math/src/: math.cpp  pid.cpp
qset_msgs/: CMakeLists.txt  README.md  package.xml  ros.sh
qset_msgs/action/: LoadPose.action  Search.action  TraverseGate.action
qset_msgs/cfg/: wheel_control.cfg
qset_msgs/msg/: ArmControl.msg  AutonomousDestination.msg  AutonomousNavigationCmd.msg  AutonomousState.msg  EncoderDecimatedSpeed.msg  QuadState.msg  TargetAngle.msg  arm_pos_enc_vals.msg  map_target.msg  map_targets.msg  perWheelSpeed.msg  sabertooth.msg  servo.msg  wheelControlMode.msg  wheelSpeed.msg
simulation/: CMakeLists.txt  package.xml
simulation/launch/: 2020_gazebo_test.launch  Kwad_gazebo.launch  Kwad_rviz.launch  display.launch  ekf_2020.launch  ekf_navsat.launch  gazebo.launch
simulation/models/: Kwad.gazebo  Kwad.xacro  gazebo.xacro  qset_rover.urdf.xacro  qset_rover_new.urdf.xacro  realsense.xacro  test.urdf.xacro
simulation/params/: gazebo.yaml
simulation/plugins/include/: LinearElbowPlugin.hpp
simulation/plugins/src/: LinearElbowPlugin.cpp
simulation/scripts/: control.py  gazebo_arm_sabertooth.py  gazebo_wheels.py  gazebo_wheels_sabertooth.py
